# Rust_Practices

./: Cargo.toml  LICENSE  README.md
10_generic_types_in_rust/: main.rs
11_traits_in_rust/: main.rs
12_life_times_in_rust/: main.rs
13_testing_in_rust/: lib.rs  main.rs
14_closures_in_rust/: main.rs
15_iterators_in_rust/: main.rs
16_publishing_a_rust_crate/: main.rs
17_cargo_workspaces/: main.rs
18_the_box_smart_pointer/: main.rs
19_smart_pointers_in_rust/: main.rs
20_concurrency_in_rust/: main.rs
21_using_trait_objects_in_rust/: main.rs
2_guessing_game/: README.md  main.rs
3_control_flow_in_rust/: main.rs
3_data_types_in_rust/: main.rs
3_functions_in_rust/: main.rs
3_variables_in_rust/: main.rs
4_slices_in_rust/: main.rs
7_module_system_in_rust/: lib.rs  main.rs
8_common_collections_in_rust/: main.rs
9_error_handling_in_rust/: main.rs
enums_and_pattern_matching_in_rust/: main.rs
functions_in_rust/: main.rs
loops_in_rust/: main.rs
ownership_in_rust/: main.rs
src/: main.rs
struct_in_rust/: main.rs
tests/: integration_test.rs
tests/common/: mod.rs
