[package]
name = "rust_practices"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
colored = "3.0.0"

[[bin]]
name = "guessing_game"
path = "guessing_game/main.rs"

[[bin]]
name = "loops_in_rust"
path = "loops_in_rust/main.rs"

[[bin]]
name = "variables_in_rust"
path = "variables_in_rust/main.rs"

[[bin]]
name = "data_types_in_rust"
path = "data_types_in_rust/main.rs"

[[bin]]
name = "functions_in_rust"
path = "functions_in_rust/main.rs"


