[package]
name = "rust_practices"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
colored = "3.0.0"
unicode-segmentation = "1.12.0"

[lib]
path = "7_module_system_in_rust/lib.rs"

[[bin]]
name = "2_guessing_game"
path = "2_guessing_game/main.rs"

[[bin]]
name = "3_loops_in_rust"
path = "3_loops_in_rust/main.rs"

[[bin]]
name = "3_variables_in_rust"
path = "3_variables_in_rust/main.rs"

[[bin]]
name = "3_data_types_in_rust"
path = "3_data_types_in_rust/main.rs"

[[bin]]
name = "3_functions_in_rust"
path = "3_functions_in_rust/main.rs"

[[bin]]
name = "3_control_flow_in_rust"
path = "3_control_flow_in_rust/main.rs"

[[bin]]
name = "4_ownership_in_rust"
path = "4_ownership_in_rust/main.rs"

[[bin]]
name = "4_slices_in_rust"
path = "4_slices_in_rust/main.rs"

[[bin]]
name = "5_struct_in_rust"
path = "5_struct_in_rust/main.rs"

[[bin]]
name = "6_enums_and_pattern_matching_in_rust"
path = "6_enums_and_pattern_matching_in_rust/main.rs"

[[bin]]
name = "7_module_system_in_rust"
path = "7_module_system_in_rust/main.rs"

[[bin]]
name = "8_common_collections_in_rust"
path = "8_common_collections_in_rust/main.rs"

[[bin]]
name = "9_error_handling_in_rust"
path = "9_error_handling_in_rust/main.rs"

[[bin]]
name = "10_generic_types_in_rust"
path = "10_generic_types_in_rust/main.rs"

[[bin]]
name = "11_traits_in_rust"
path = "11_traits_in_rust/main.rs"

